dev: encapsulate graph handlers from plugin.py into graphps

--- a/src/mkdocs_note/static/stylesheet/graph.css
+++ b/src/mkdocs_note/static/stylesheet/graph.css
@@ -1,3 +1,7 @@
+/*
+ *Migrated from [mkdocs-network-graph-plugin](https://github.com/develmusa/mkdocs-network-graph-plugin/blob/main/src/mkdocs_graph_plugin/graph.py).
+**/
+
 .graph {
   margin-top: 2.4em;
   height:300px;
